--- a/panier.html
+++ b/panier.html
@@ -20,8 +20,13 @@
                 <img class="logo-pokémon" src="images/Pokémon_logo.svg.png" alt="logo">
             </div>
         </div>
-        <div id="cart-container"></div>
     </header>
+
+    <h1>Panier</h1>
+    <div id="cart-container"></div>
+    <button id="clear-cart-button">Clear cart</button>
     <script src="panier.js"></script>
+    
+    
 </body>
 </html>
