--- a/pokemon.html
+++ b/pokemon.html
@@ -25,9 +25,10 @@
         <div class="lepokemon">
             <div id="pokemon-details-container" class="description">
             </div>
-            <button id="addtocart" onclick="addToCart('${JSON.stringify(pokemonDetails)}')">Ajouter au panier</button>
+            <button id="addToCartButton" onclick="addToCart()">Ajouter au panier</button>
         </div>
     </div>
     <script src="pokemon.js"></script>
+    <script src="panier.js"></script>
 </body>
 </html>
